// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleEditorFlyout don't render after closing the flyout 1`] = `null`;

exports[`RuleEditorFlyout don't render when not opened 1`] = `null`;

exports[`RuleEditorFlyout renders the flyout after adding a condition to a rule 1`] = `
<div
  data-eui="EuiFlyout"
  data-test-subj="mlRuleEditorFlyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader-hasBorder"
  >
    <h1
      class="euiTitle emotion-euiTitle-m"
      id="flyoutTitle"
    >
      Create job rule
    </h1>
  </div>
  <div
    class="euiFlyoutBody emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <dl
          class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
          data-type="column"
          style="grid-template-columns: 15fr 85fr;"
        >
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Job ID
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            farequote_no_by
          </dd>
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Detector
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            mean(responsetime)
          </dd>
        </dl>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. 
            <a
              class="euiLink emotion-euiLink-primary"
              href="jest-metadata-mock-url"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Action
        </h2>
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Choose the actions to take when the job rule matches an anomaly.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-selected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="check"
                />
                <input
                  checked=""
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_result_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_result_cb"
              >
                Skip result (recommended)
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="empty"
                />
                <input
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_model_update_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_model_update_cb"
              >
                Skip model update
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Conditions
        </h2>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiCheckbox emotion-euiCheckbox"
        >
          <div
            class="euiCheckbox__square emotion-euiCheckbox__square-disabled-selected"
          >
            <span
              class="emotion-euiCheckbox__icon-check"
              data-euiicon-type="check"
            />
            <input
              checked=""
              class="euiCheckbox__input emotion-euiCheckbox__input"
              disabled=""
              id="enable_conditions_checkbox"
              type="checkbox"
            />
          </div>
          <label
            class="euiCheckbox__label emotion-euiCheckbox__label-disabled"
            for="enable_conditions_checkbox"
          >
            Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND.
          </label>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-m-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
              id="appliesToPopover"
            >
              <button
                class="euiExpression emotion-euiExpression-isClickable-success"
              >
                <span
                  class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                >
                  when
                </span>
                 
                <span
                  class="euiExpression__value emotion-euiExpression__value"
                >
                  actual
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
              id="operatorValuePopover"
            >
              <button
                class="euiExpression emotion-euiExpression-isClickable-success"
              >
                <span
                  class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                >
                  is less than
                </span>
                 
                <span
                  class="euiExpression__value emotion-euiExpression__value"
                >
                  1
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <button
              aria-label="Delete condition"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-danger"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="trash"
              />
            </button>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Add new condition
            </span>
          </span>
        </button>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <div
          class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="question"
            />
            Rerun job
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-s-euiTextColor-default"
          >
            <p>
              Changes to job rules take effect for new results only.
            </p>
            <p>
              To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutFooter emotion-euiFlyoutFooter"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="cross"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Close
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Save
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditorFlyout renders the flyout after setting the rule to edit 1`] = `
<div
  data-eui="EuiFlyout"
  data-test-subj="mlRuleEditorFlyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader-hasBorder"
  >
    <h1
      class="euiTitle emotion-euiTitle-m"
      id="flyoutTitle"
    >
      Edit job rule
    </h1>
  </div>
  <div
    class="euiFlyoutBody emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <dl
          class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
          data-type="column"
          style="grid-template-columns: 15fr 85fr;"
        >
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Job ID
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            farequote_no_by
          </dd>
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Detector
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            min(responsetime)
          </dd>
        </dl>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. 
            <a
              class="euiLink emotion-euiLink-primary"
              href="jest-metadata-mock-url"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Action
        </h2>
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Choose the actions to take when the job rule matches an anomaly.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-selected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="check"
                />
                <input
                  checked=""
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_result_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_result_cb"
              >
                Skip result (recommended)
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="empty"
                />
                <input
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_model_update_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_model_update_cb"
              >
                Skip model update
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Conditions
        </h2>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiCheckbox emotion-euiCheckbox"
        >
          <div
            class="euiCheckbox__square emotion-euiCheckbox__square-disabled-selected"
          >
            <span
              class="emotion-euiCheckbox__icon-check"
              data-euiicon-type="check"
            />
            <input
              checked=""
              class="euiCheckbox__input emotion-euiCheckbox__input"
              disabled=""
              id="enable_conditions_checkbox"
              type="checkbox"
            />
          </div>
          <label
            class="euiCheckbox__label emotion-euiCheckbox__label-disabled"
            for="enable_conditions_checkbox"
          >
            Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND.
          </label>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-m-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
              id="appliesToPopover"
            >
              <button
                class="euiExpression emotion-euiExpression-isClickable-success"
              >
                <span
                  class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                >
                  when
                </span>
                 
                <span
                  class="euiExpression__value emotion-euiExpression__value"
                >
                  diff from typical
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiPopover emotion-euiPopover-inline-block"
              id="operatorValuePopover"
            >
              <button
                class="euiExpression emotion-euiExpression-isClickable-success"
              >
                <span
                  class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                >
                  is less than or equal to
                </span>
                 
                <span
                  class="euiExpression__value emotion-euiExpression__value"
                >
                  123
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <button
              aria-label="Delete condition"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-danger"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="trash"
              />
            </button>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Add new condition
            </span>
          </span>
        </button>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <div
          class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="question"
            />
            Rerun job
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-s-euiTextColor-default"
          >
            <p>
              Changes to job rules take effect for new results only.
            </p>
            <p>
              To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutFooter emotion-euiFlyoutFooter"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="cross"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Close
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Save
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditorFlyout renders the flyout for creating a rule with conditions only 1`] = `
<div
  data-eui="EuiFlyout"
  data-test-subj="mlRuleEditorFlyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader-hasBorder"
  >
    <h1
      class="euiTitle emotion-euiTitle-m"
      id="flyoutTitle"
    >
      Create job rule
    </h1>
  </div>
  <div
    class="euiFlyoutBody emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <dl
          class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
          data-type="column"
          style="grid-template-columns: 15fr 85fr;"
        >
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Job ID
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            farequote_no_by
          </dd>
          <dt
            class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
          >
            Detector
          </dt>
          <dd
            class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
          >
            mean(responsetime)
          </dd>
        </dl>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. 
            <a
              class="euiLink emotion-euiLink-primary"
              href="jest-metadata-mock-url"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
              <span
                class="emotion-EuiExternalLinkIcon"
                data-euiicon-type="popout"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Action
        </h2>
        <div
          class="euiText emotion-euiText-m"
        >
          <p>
            Choose the actions to take when the job rule matches an anomaly.
          </p>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-selected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="check"
                />
                <input
                  checked=""
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_result_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_result_cb"
              >
                Skip result (recommended)
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiCheckbox emotion-euiCheckbox"
            >
              <div
                class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
              >
                <span
                  class="emotion-euiCheckbox__icon-check"
                  data-euiicon-type="empty"
                />
                <input
                  class="euiCheckbox__input emotion-euiCheckbox__input"
                  id="skip_model_update_cb"
                  type="checkbox"
                />
              </div>
              <label
                class="euiCheckbox__label emotion-euiCheckbox__label"
                for="skip_model_update_cb"
              >
                Skip model update
              </label>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            >
              <span
                data-euiicon-type="question"
                tabindex="0"
              >
                Info
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <h2
          class="euiTitle emotion-euiTitle-m"
        >
          Conditions
        </h2>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiCheckbox emotion-euiCheckbox"
        >
          <div
            class="euiCheckbox__square emotion-euiCheckbox__square-disabled-selected"
          >
            <span
              class="emotion-euiCheckbox__icon-check"
              data-euiicon-type="check"
            />
            <input
              checked=""
              class="euiCheckbox__input emotion-euiCheckbox__input"
              disabled=""
              id="enable_conditions_checkbox"
              type="checkbox"
            />
          </div>
          <label
            class="euiCheckbox__label emotion-euiCheckbox__label-disabled"
            for="enable_conditions_checkbox"
          >
            Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND.
          </label>
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Add new condition
            </span>
          </span>
        </button>
        <div
          class="euiSpacer euiSpacer--xl emotion-euiSpacer-xl"
        />
        <div
          class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
          >
            <span
              aria-hidden="true"
              class="emotion-euiCallOut__icon"
              color="inherit"
              data-euiicon-type="question"
            />
            Rerun job
          </p>
          <div
            class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
          />
          <div
            class="euiText emotion-euiText-s-euiTextColor-default"
          >
            <p>
              Changes to job rules take effect for new results only.
            </p>
            <p>
              To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutFooter emotion-euiFlyoutFooter"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="cross"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Close
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-fill-disabled"
          disabled=""
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Save
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditorFlyout renders the select action component for a detector with a rule 1`] = `
<div
  data-eui="EuiFlyout"
  role="dialog"
>
  <button
    aria-label="Close this dialog"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  />
  <div
    class="euiFlyoutHeader emotion-euiFlyoutHeader-hasBorder"
  >
    <h1
      class="euiTitle emotion-euiTitle-m"
      id="flyoutTitle"
    >
      Edit job rules
    </h1>
  </div>
  <div
    class="euiFlyoutBody emotion-euiFlyoutBody"
  >
    <div
      class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
      tabindex="0"
    >
      <div
        class="euiFlyoutBody__overflowContent"
      >
        <div
          data-testid="mock-select-rule-action"
        >
          Mock SelectRuleAction for job farequote_no_by and detector 1
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlyoutFooter emotion-euiFlyoutFooter"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="cross"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Close
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
